--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             <div class="clock-leg right"></div>
           </div>
 
-          <p class="welcome-copy">Számold ki, mennyi munkaórádba kerül egy vágyott vásárlás, és hozz tudatosabb döntéseket úgy, mint egy modern fintech appban.</p>
+          <p class="welcome-copy">Számold ki, mennyi munkaórádba kerül egy vágyott vásárlás és érezd nagyon rosszul magad!</p>
           <div class="card" style="display:flex;justify-content:center;align-items:center;">
             <button onclick="goTo('profile'); track('start_click')">Belépés a profilodhoz</button>
           </div>
