--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
        FONTS
        ========================================================================= */
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
+    /* ======================================================
+   FIX: Ne lógjon rá a lebegő menü az alatta lévő tartalomra
+   ====================================================== */
+main, .screen, .stack, .card {
+  padding-bottom: 120px; /* hely a lebegő navigáció alatt */
+}
+
 
     /* =========================================================================
        TOKENS
