--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ main, .screen, .stack, .card {
       <!-- 1. Welcome -->
       <section id="screen-welcome" class="screen active" data-theme="welcome">
         <div class="welcome-hero">
-          <div class="welcome-pill">Personal finance companion</div>
+          <div class="welcome-pill">Legyél te is szomorúbb!</div>
           <h1>Munkaóra</h1>
 
           <!-- REPLACED ORB → CLOCK -->
